# Chainlink_Chromion_Hackatho_Back

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: pronostico.json  queries.py
test/: test_weather_prediction.py
